syntax = "proto3";

package syft.lib.pandas;

message PandasDataFrame {
  bytes dataframe = 1;
}
